fix how-it-works fonts and spacing

--- a/frontend/src/assets/stylesheets/util/font.css
+++ b/frontend/src/assets/stylesheets/util/font.css
@@ -11,12 +11,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-.how-it-works--section p,
-.how-it-works--section-1 p {
-  font-size: 24px;
-}
-
-.page-title {
-  font-size: 40px;
-}
