--- a/frontend/src/assets/stylesheets/util/reset.css
+++ b/frontend/src/assets/stylesheets/util/reset.css
@@ -45,3 +45,8 @@ button {
   margin-top: 150px;
   align-items: center;
 }
+
+h1 {
+  font-size: 40px;
+}
+
